tests/fixtures/negative/comments/AbsentOrWrongFileLicense.kt
/*
 * Copyright 2024 Example Corp.
 * Licensed under the Apache License, Version 2.0
 */
package comments

class WithLicenseHeader {
    fun doSomething() {
        println("hello")
    }
}
